# jyogi-log

./: .env.example  .env.template  README.md  compose.yml  docker-compose.yml  justfile
.github/: PULL_REQUEST_TEMPLATE.md
api/: .env.example  .gitignore  Cargo.toml
api/src/: .env.template  app.rs  error.rs  lib.rs  main.rs  state.rs
api/src/adapter/: mod.rs
api/src/adapter/http/: mod.rs  validator.rs
api/src/adapter/http/handlers/: admin.rs  auth.rs  auth_handler.rs  auth_handlers.rs  clients.rs  health_handler.rs  mod.rs  oauth.rs  users.rs
api/src/adapter/http/middleware/: auth.rs  mod.rs  rbac.rs
api/src/adapter/http/routes/: admin.rs  auth.rs  auth_routes.rs  clients.rs  health.rs  health_route.rs  mod.rs  oauth.rs  users.rs
api/src/adapter/logging/: init.rs
api/src/adapter/persistence/: db.rs  mod.rs  refresh_token_repository.rs  session_repo.rs  session_repository.rs  user_credential_repository.rs  user_identity_repository.rs  user_profile_repository.rs  user_repo.rs  user_repository.rs
api/src/adapter/security/: hashing.rs  mod.rs
api/src/adapter/security/token/: jwt.rs  mod.rs  opaque.rs
api/src/config/: env.rs  mod.rs
api/src/domain/models/: mod.rs  refresh_token.rs  role.rs  session.rs  token.rs  user.rs  user_credential.rs  user_identity.rs  user_profile.rs
api/src/error/: mod.rs
api/src/service/: auth.rs  auth_service.rs
api/tests/: health.rs
docs/: 00_designdoc_template.md  01_feature-list_md.md  02_.md  03_screen-flow_md.md  04_permission-design.md  05_erd.md  06_directory.md  07_infrastructure.md  08_logging.md  09_issue_management.md  09_schedule_and_issues_md.md
migration/: .env.example  Dockerfile  docker-compose.yml
migrations/: 0000_extensions.sql  0001_users.up.sql  0002_user_identities.down.sql  0002_user_identities.up.sql  0003_user_credentials.up.sql  0004_user_profile.up.sql  0005_sessions.up.sql  0006_refresh_tokens.up.sql  0007_roles.up.sql  0008_oauth_clients.down.sql  0008_oauth_clients.up.sql  0009_oauth_authorization_codes.up.sql  0010_client_tokens.down.sql  (+2 more)
(+72 files in other folders)
