[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }
tokio = { version = "1.50.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
missing_const_for_fn = "allow"